environments/dev/deployments/echo-app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: echo-app
  namespace: echo-app
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    cert-manager.io/cluster-issuer: "letsencrypt-dev"
    external-dns.alpha.kubernetes.io/target: "51.89.191.218"
    external-dns.alpha.kubernetes.io/enabled: "true"
    external-dns.alpha.kubernetes.io/ttl: "300"
    # external-dns.alpha.kubernetes.io/ingress-hostname-source: "annotation-only"



spec:
  ingressClassName: nginx
  rules:
  - host: testing.dev.786999.xyz
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: echo-app
            port:
              number: 80
  tls:
    - hosts:
      - testing.dev.786999.xyz
      secretName: test-tls-lets
